<resources>
    <string name="app_name">AllRank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="game">Game</string>
    <string name="book">Book</string>
    <string name="trend">Trend</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>