<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/baseline_music_24"
        android:title="@string/music" />

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/baseline_movie_24"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_trend"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/trend" />
    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/baseline_videogame_asset_24"
        android:title="@string/game" />
    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/baseline_book_24"
        android:title="@string/book" />

</menu>