<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_music"
        android:name="yellowc.app.allrank.ui.music.MusicFragment"
        android:label="@string/music"
        tools:layout="@layout/fragment_music">

        <action
            android:id="@+id/action_navigation_music_to_detailFragment"
            app:destination="@id/detailFragment">
            <argument
                android:name="type"
                app:argType="string" />
            <argument
                android:name="data"
                app:argType="yellowc.app.allrank.domain.models.BaseModel" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_movie"
        android:name="yellowc.app.allrank.ui.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie">

        <action
            android:id="@+id/action_navigation_movie_to_detailFragment"
            app:destination="@id/detailFragment">
            <argument
                android:name="type"
                app:argType="string" />
            <argument
                android:name="data"
                app:argType="yellowc.app.allrank.domain.models.BaseModel" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="yellowc.app.allrank.ui.home.HomeFragment"
        android:label="@string/trend"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment">
            <argument
                android:name="type"
                app:argType="string" />
            <argument
                android:name="data"
                app:argType="yellowc.app.allrank.domain.models.BaseModel" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_game"
        android:name="yellowc.app.allrank.ui.game.GameFragment"
        android:label="@string/game"
        tools:layout="@layout/fragment_game">

        <action
            android:id="@+id/action_navigation_game_to_detailFragment"
            app:destination="@id/detailFragment">
            <argument
                android:name="type"
                app:argType="string" />
            <argument
                android:name="data"
                app:argType="yellowc.app.allrank.domain.models.BaseModel" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_book"
        android:name="yellowc.app.allrank.ui.book.BookFragment"
        android:label="@string/book"
        tools:layout="@layout/fragment_book">

        <action
            android:id="@+id/action_navigation_book_to_detailFragment"
            app:destination="@id/detailFragment">
            <argument
                android:name="type"
                app:argType="string" />
            <argument
                android:name="data"
                app:argType="yellowc.app.allrank.domain.models.BaseModel" />
        </action>

    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="yellowc.app.allrank.ui.detail.DetailFragment"
        android:label="DetailFragment"  >
        <argument
            android:name="type"
            app:argType="string" />
        <argument
            android:name="data"
            app:argType="yellowc.app.allrank.domain.models.BaseModel" />
    </fragment>



</navigation>